@@ -26,6 +26,7 @@ export(genicVarA)
 export(genicVarAA)
 export(genicVarD)
 export(genicVarG)
+export(getNumThreads)
 export(getQtlMap)
 export(getSnpMap)
 export(gv)
@@ -73,6 +74,15 @@ export(setPheno)
 export(setPhenoGCA)
 export(setPhenoProgTest)
 export(smithHazel)
+export(solveMKM)
+export(solveMVM)
+export(solveRRBLUP)
+export(solveRRBLUPMK)
+export(solveRRBLUPMV)
+export(solveRRBLUP_EM)
+export(solveRRBLUP_EM2)
+export(solveRRBLUP_EM3)
+export(solveUVM)
 export(usefulness)
 export(varA)
 export(varAA)
