@@ -123,7 +123,6 @@ setMethod("c",
           }
 )
 
-#' @describeIn HybridPop Test if object is a HybridPop class object
 isHybridPop = function(x) {
   ret = is(x, class2 = "HybridPop")
   return(ret)
