@@ -14,9 +14,9 @@
 #' @slot nChr number of chromosomes
 #' @slot ploidy level of ploidy
 #' @slot nLoci number of loci per chromosome
-#' @slot geno "matrix" containing chromosome genotypes. The "matrix" 
-#' has dimensions nChr by 1 and each element is a three dimensional
-#' array of raw values. The array dimensions are nLoci by ploidy by nInd.
+#' @slot geno list of nChr length containing chromosome genotypes.
+#' Each element is a three dimensional array of raw values. 
+#' The array dimensions are nLoci by ploidy by nInd.
 #' 
 #' @export
 setClass("RawPop",
@@ -24,7 +24,7 @@ setClass("RawPop",
                  nChr="integer",
                  ploidy="integer",
                  nLoci="integer",
-                 geno="matrix"))
+                 geno="list"))
 
 setValidity("RawPop",function(object){
   errors = character()
@@ -111,7 +111,6 @@ setMethod("show",
           }
 )
 
-#' @describeIn RawPop Test if object is a RawPop class object
 isRawPop = function(x) {
   ret = is(x, class2 = "RawPop")
   return(ret)
@@ -131,7 +130,7 @@ isRawPop = function(x) {
 #' @param i index of individuals
 #' @param ... additional 'MapPop' objects
 #' 
-#' @slot genMap "matrix" of chromosome genetic maps
+#' @slot genMap list of chromosome genetic maps
 #' @slot centromere vector of centromere positions
 #' @slot inbred indicates whether the individuals are fully inbred
 #' 
@@ -197,7 +196,6 @@ setMethod("c",
           }
 )
 
-#' @describeIn MapPop Test if object is a MapPop class object
 isMapPop = function(x) {
   ret = is(x, class2 = "MapPop")
   return(ret)
@@ -326,7 +324,7 @@ cChr = function(...){
         stopifnot(x@nInd==y@nInd,
                   x@ploidy==y@ploidy)
         x@nChr = x@nChr+y@nChr
-        x@geno = rbind(x@geno,y@geno)
+        x@geno = c(x@geno,y@geno)
         x@genMap = c(x@genMap,y@genMap)
         x@centromere = c(x@centromere,y@centromere)
         x@nLoci = c(x@nLoci,y@nLoci)
@@ -337,7 +335,6 @@ cChr = function(...){
   return(x)
 }
 
-#' @describeIn NamedMapPop Test if object is a NamedMapPop class object
 isNamedMapPop = function(x) {
   ret = is(x, class2 = "NamedMapPop")
   return(ret)
@@ -743,7 +740,6 @@ resetPop = function(pop,simParam=NULL){
   return(pop)
 }
 
-#' @describeIn Pop Test if object is a Pop class object
 isPop = function(x) {
   ret = is(x, class2 = "Pop")
   return(ret)
@@ -856,7 +852,6 @@ newMegaPop = function(...){
   return(output)
 }
 
-#' @describeIn MegaPop Test if object is a MegaPop class object
 isMegaPop = function(x) {
   ret = is(x, class2 = "MegaPop")
   return(ret)
