@@ -1986,7 +1986,6 @@ sampEpiEff = function(qtlLoci,nTraits,corr,gamma,shape,relVar){
   return(epiEff)
 }
 
-#' @describeIn SimParam Test if object is a SimParam class object
 isSimParam = function(x) {
   ret = is(x, class2 = "SimParam")
   return(ret)
