@@ -1,0 +1,24 @@
+% Generated by roxygen2: do not edit by hand
+% Please edit documentation in R/RcppExports.R
+\name{solveMKM}
+\alias{solveMKM}
+\title{Solve Multikernel Model}
+\usage{
+solveMKM(y, X, Zlist, Klist, maxIter = 40L, tol = 1e-04)
+}
+\arguments{
+\item{y}{a matrix with n rows and 1 column}
+
+\item{X}{a matrix with n rows and x columns}
+
+\item{Zlist}{a list of Z matrices}
+
+\item{Klist}{a list of K matrices}
+
+\item{maxIter}{maximum number of iteration}
+
+\item{tol}{tolerance for convergence}
+}
+\description{
+Solves a univariate mixed model with multiple random effects.
+}
