@@ -1,0 +1,24 @@
+% Generated by roxygen2: do not edit by hand
+% Please edit documentation in R/RcppExports.R
+\name{solveMVM}
+\alias{solveMVM}
+\title{Solve Multivariate Model}
+\usage{
+solveMVM(Y, X, Z, K, tol = 1e-06, maxIter = 1000L)
+}
+\arguments{
+\item{Y}{a matrix with n rows and q columns}
+
+\item{X}{a matrix with n rows and x columns}
+
+\item{Z}{a matrix with n rows and m columns}
+
+\item{K}{a matrix with m rows and m columns}
+
+\item{tol}{tolerance for convergence}
+
+\item{maxIter}{maximum number of iteration}
+}
+\description{
+Solves a multivariate mixed model of form \eqn{Y=X\beta+Zu+e}
+}
