@@ -1,0 +1,20 @@
+% Generated by roxygen2: do not edit by hand
+% Please edit documentation in R/RcppExports.R
+\name{solveRRBLUPMK}
+\alias{solveRRBLUPMK}
+\title{Solve Multikernel RR-BLUP}
+\usage{
+solveRRBLUPMK(y, X, Mlist, maxIter = 40L)
+}
+\arguments{
+\item{y}{a matrix with n rows and 1 column}
+
+\item{X}{a matrix with n rows and x columns}
+
+\item{Mlist}{a list of M matrices}
+
+\item{maxIter}{maximum number of iteration}
+}
+\description{
+Solves a univariate mixed model with multiple random effects.
+}
