@@ -1,0 +1,22 @@
+% Generated by roxygen2: do not edit by hand
+% Please edit documentation in R/RcppExports.R
+\name{solveRRBLUPMV}
+\alias{solveRRBLUPMV}
+\title{Solve Multivariate RR-BLUP}
+\usage{
+solveRRBLUPMV(Y, X, M, maxIter = 1000L, tol = 1e-06)
+}
+\arguments{
+\item{Y}{a matrix with n rows and q columns}
+
+\item{X}{a matrix with n rows and x columns}
+
+\item{M}{a matrix with n rows and m columns}
+
+\item{maxIter}{maximum number of iteration}
+
+\item{tol}{tolerance for convergence}
+}
+\description{
+Solves a multivariate mixed model of form \eqn{Y=X\beta+Mu+e}
+}
