@@ -1,0 +1,20 @@
+% Generated by roxygen2: do not edit by hand
+% Please edit documentation in R/RcppExports.R
+\name{solveUVM}
+\alias{solveUVM}
+\title{Solve Univariate Model}
+\usage{
+solveUVM(y, X, Z, K)
+}
+\arguments{
+\item{y}{a matrix with n rows and 1 column}
+
+\item{X}{a matrix with n rows and x columns}
+
+\item{Z}{a matrix with n rows and m columns}
+
+\item{K}{a matrix with m rows and m columns}
+}
+\description{
+Solves a univariate mixed model of form \eqn{y=X\beta+Zu+e}
+}
