@@ -8,6 +8,8 @@ Changes in version 1.0.4.9990
   Bug fixes
     -fixed error in pullIbdHaplo when chr isn't NULL
     -fixed an error with assigning 1 QTL and/or SNP
+    -changed geno slot from matrix to list to support future RcppArmadillo changes
+    -doubleGenome and reduceGenome now work with IBD tracking
 
 Changes in version 1.0.4
 
